tests/ui/bitfield/field_out_of_bounds_primitive.stderr
error[E0080]: evaluation of constant value failed
 --> tests/ui/bitfield/field_out_of_bounds_primitive.rs:6:17
  |
6 | struct BitField(u128); // Can only store bits between 0 - (sizeof(usize) * 8).
  |                 ^^^^ the evaluated program panicked at 'Field exceeds the bitfield size', $DIR/tests/ui/bitfield/field_out_of_bounds_primitive.rs:6:17
  |
  = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `panic` (in Nightly builds, run with -Z macro-backtrace for more info)
